Closed
Bug 208838
Opened 22 years ago
Closed 22 years ago
Location field not auto-selected when window opened with blank location (a la "about:blank")
Categories
(Camino Graveyard :: Location Bar & Autocomplete, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino0.8
People
(Reporter: karl, Assigned: mikepinkerton)
Details
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.5a) Gecko/20030608 Camino/0.7+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.5a) Gecko/20030608 Camino/0.7+
When opening a new window in a copy of Camino that has no home page set (home
page is set to "", with no quotes, rather than yahoo.com or about:blank), Camino
opens a blank page but does not make the location field active.
Reproducible: Always
Steps to Reproduce:
1.Open Camino Preferences, go to the navigation pane
2.Set the home page to "" (without the quotes), overriding System Preferences if
needed.
3.Close preferences window
4.Open new window
Actual Results:
The window opened to a blank page with nothing selected
Expected Results:
The window should open to a blank page (as if the home page was set to
"about:blank"), but the location field should be active (selected/ready for text
entry/etc.)
| Reporter | ||
Comment 1•22 years ago
|
||
Bug 152470 covered the issue of auto-focusing on the location text box if a
window is opened with "about:blank" as the location. However, that might not be
too common.
It seems to me (when browing other browsers) that when a user decided to not
have a home page set, he/she will simply enter an empty string into the home
page field. I rarely encounter a normal user who knows what "about:blank" is.
In fact, the only place where it may be seen with any regularity is as the
(temporary) name of a pop-up window before the ad has a chance to load in.
Taking IE as an example, in the Web Browser->Browser Display section of its
preferences, the home page setting has three possibilities. You can enter an
address, you can "Use None" (a button which sets the home page to ""), or you
can "Use Default" (which sets the home page to "http://www.msn.com/"). If I
click "Use None", save preferences, and open a new IE window, the location bar
will automatically be activated and made ready for me to type a location.
It just seems like a pretty good thing to do, especially since "about:blank"
isn't too well known. Of course, that's just me! 8->
| Reporter | ||
Updated•22 years ago
|
Severity: enhancement → trivial
| Assignee | ||
Comment 2•22 years ago
|
||
agreed, this should work for "about:blank" or ""
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → Camino0.8
| Assignee | ||
Comment 3•22 years ago
|
||
fixed.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•