allow an empty url to be either "" or about:blank (bug 208838)